--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.0.2",
         "cloudinary-labs/cloudinary-laravel": "^2.0",
+        "darkaonline/l5-swagger": "^8.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "lorisleiva/laravel-actions": "^2.4",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
