--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/attributes": "*",
+        "laravel-lang/http-statuses": "*",
+        "laravel-lang/lang": "*",
+        "laravel-lang/publisher": "*",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
