FIX: Cambiando las variables de la base de datos por que expiro nuestra cuenta xd

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=sql10.freemysqlhosting.net
+DB_HOST=sql10.freesqldatabase.com
 DB_PORT=3306
-DB_DATABASE=sql10529517
-DB_USERNAME=sql10529517
-DB_PASSWORD=N59bPCX2K2
+DB_DATABASE=sql10538427
+DB_USERNAME=sql10538427
+DB_PASSWORD=gPqPx7NCPk
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
