--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=sql10.freesqldatabase.com
-DB_PORT=3306
-DB_DATABASE=sql10538427
-DB_USERNAME=sql10538427
-DB_PASSWORD=gPqPx7NCPk
+DB_HOST=containers-us-west-96.railway.app
+DB_PORT=7724
+DB_DATABASE=railway
+DB_USERNAME=pD9dvDcZnZtA1t0Fd85Y
+DB_PASSWORD=pD9dvDcZnZtA1t0Fd85Y
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
