--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=containers-us-west-96.railway.app
 DB_PORT=7724
 DB_DATABASE=railway
-DB_USERNAME=pD9dvDcZnZtA1t0Fd85Y
+DB_USERNAME=root
 DB_PASSWORD=pD9dvDcZnZtA1t0Fd85Y
 
 BROADCAST_DRIVER=log
