--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "lorisleiva/laravel-actions": "^2.4",
+        "owenvoke/blade-fontawesome": "^2.1",
         "spatie/laravel-permission": "^5.5",
         "staudenmeir/belongs-to-through": "^2.5",
         "staudenmeir/eloquent-has-many-deep": "^1.7"
